--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>do some art</title>
     <style> body {padding: 0; margin: 0;} </style>
     <script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.js"></script>
-    <script src="sketch.js"></script>
+    <script type="module" src="sketch.js"></script>
   </head>
   <body>
   </body>
